--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 services:
-  get-lambda-rie:
-    image: couger-inc/mdm-go-lambda-get:latest
+  stores-manager-get-lambda:
+    image: couger-inc/ludens-mdm-backend/stores/manager/get:latest
     build:
       context: .
       args:
-        - BUILD_DIR=user-store/get
+        - BUILD_DIR=get-store-managers-lambda
         - HANDLER=main.go
     container_name: get-lambda-rie
     platform: linux/amd64
@@ -22,12 +22,12 @@ services:
         limits:
           # If you experience any errors such as Chrome crashing or not being available you might need to increase the storage available to your Lambda Function.
           memory: 4096M
-  put-lambda-rie:
-    image: couger-inc/mdm-go-lambda-put:latest
+  stores-manager-put-lambda:
+    image: couger-inc/ludens-mdm-backend/stores/manager/put:latest
     build:
       context: .
       args:
-        - BUILD_DIR=user-store/put
+        - BUILD_DIR=put-store-managers-lambda
         - HANDLER=main.go
     container_name: put-lambda-rie
     platform: linux/amd64
@@ -45,35 +45,12 @@ services:
         limits:
           # If you experience any errors such as Chrome crashing or not being available you might need to increase the storage available to your Lambda Function.
           memory: 4096M
-  patch-lambda-rie:
-    image: couger-inc/mdm-go-lambda-patch:latest
+  stores-manager-delete-lambda:
+    image: couger-inc/ludens-mdm-backend/stores/manager/delete:latest
     build:
       context: .
       args:
-        - BUILD_DIR=user-store/patch
-        - HANDLER=main.go
-    container_name: patch-lambda-rie
-    platform: linux/amd64
-    volumes:
-      - ~/.aws-lambda-rie:/aws-lambda
-    ports:
-      - "9000:8080"
-    entrypoint: ["/aws-lambda/aws-lambda-rie"]
-    command: ["./main"]
-    env_file: ".env"
-    networks:
-      - container-link
-    deploy:
-      resources:
-        limits:
-          # If you experience any errors such as Chrome crashing or not being available you might need to increase the storage available to your Lambda Function.
-          memory: 4096M
-  delete-lambda-rie:
-    image: couger-inc/mdm-go-lambda-delete:latest
-    build:
-      context: .
-      args:
-        - BUILD_DIR=user-store/delete
+        - BUILD_DIR=delete-store-managers-lambda
         - HANDLER=main.go
     container_name: delete-lambda-rie
     platform: linux/amd64
@@ -91,12 +68,12 @@ services:
         limits:
           # If you experience any errors such as Chrome crashing or not being available you might need to increase the storage available to your Lambda Function.
           memory: 4096M
-  manager-get-lambda-rie:
-    image: couger-inc/mdm-manager-go-lambda-get:latest
+  stores-get-lambda:
+    image: couger-inc/ludens-mdm-backend/stores/get:latest
     build:
       context: .
       args:
-        - BUILD_DIR=manager/get
+        - BUILD_DIR=get-managers-lambda
         - HANDLER=main.go
     container_name: manager-get-lambda-rie
     platform: linux/amd64
